包名修改为codedreamplus

--- a/src/main/resources/codedreamplus-mybatis.yml
+++ b/src/main/resources/codedreamplus-mybatis.yml
@@ -1,8 +1,8 @@
 #mybatis-plus配置
 mybatis-plus:
-  mapper-locations: classpath:com/codedream/**/mapper/*Mapper.xml
+  mapper-locations: classpath:com/codedreamplus/**/mapper/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.codedream.**.entity
+  typeAliasesPackage: com.codedreamplus.**.entity
   global-config:
     # 关闭MP3.0自带的banner
     banner: false
