--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,22 @@
     <version>1.0.0</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>MybatisPlus常用功能配置</description>
+    <url>https://github.com/CodeDreamPlus/codedream-mybatis.git</url>
+    <developers>
+        <developer>
+            <name>Shijianlong</name>
+            <email>1447855920@qq.com</email>
+            <organization>com.codedreamplus</organization>
+            <organizationUrl>https://www.codedreamplus.com</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/CodeDreamPlus/codedream-mybatis.git</connection>
+        <developerConnection>scm:git:ssh://github.com:CodeDreamPlus/codedream-mybatis.git</developerConnection>
+        <url>https://github.com/CodeDreamPlus/codedream-mybatis/tree/main</url>
+    </scm>
+
     <properties>
         <java.version>11</java.version>
         <maven.plugin.version>3.8.1</maven.plugin.version>
